# asiair-updater

./: .gitignore  Cargo.toml  README.md
scripts/: payload.sh
src/: errors.rs  logger.rs  main.rs  mdns_discovery.rs  network.rs  payload.rs  utils.rs
