[package]
name = "asiair-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
mdns = "3.0.0"
async-std = "1.12.0"
futures-util = "0.3.30"
thiserror = "1.0.61"
md5 = "0.7.0"
serde = "1.0.204"
serde_json = "1.0.120"
tar = "0.4.41"
bzip2 = "0.4.4"
log = "0.4.22"
env_logger = "0.11.3"
colored = "2.1.0"
